--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -32,8 +32,8 @@
 
 .title{
   font-family: "Lato";
-  font-size: 60px;
-  line-height: 70px;
+  font-size: calc(14px + (60 - 14) * ((100vw - 300px) / (1400 - 300)));
+  line-height: calc(14px + (70 - 14) * ((100vw - 300px) / (1400 - 300)));
   font-weight:800;
  
 }
