--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,71 +1,242 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
-.navbar{
-    background-color: transparent;
-    /* border: 1px solid red; */
-    background-color: #fff;
-    padding: 30px 50px;
-    position:relative;
-    display: flex;
-    justify-content: right;
-}
-
-.logo{
-    width:140px;
-    height: 122px;
-}
-.navbarlist{
- /* background: #000; */
- color:#fff;
- list-style: none;
- display: flex;
-}
-
-.navbarlist li{
-    margin: 0px 10px;
-}
-.navLink {
-    font-family: 'Lato', sans-serif;
-    font-size: 16px;
-    color:black;
-    font-weight: 500;
-    text-transform: uppercase;
-    text-decoration: none;
-    line-height: 19px;
-    position: relative;
-    /* border: 1px solid; */
-    padding-bottom: 5px;
-    /* transition: .2s ease-in-out; */
-}
-
-.navLink:hover{
-    border-bottom: 4px solid #008037;
-    
-
-}
-.navLink:hover ~ .navLink::after{
-    content:'';
-    /* width:30px; */
-    background:#008037;
-    height: 2px;
-    position:absolute;
-    /* top:1px; */
-    left:1px;
-    right: 1px;
-    bottom: -7px;
-    height: 5px;
-}
 .logobox{
-    position:absolute;
-    top:0px;
-    left:80px;
-    /* border: 1px solid red; */
-    background-color: #fff;
     border-radius: 50%;
-    padding: 5px;
-    z-index: 1000;
+    padding: 2px;
+    background-color: #fff;
+    width:100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position:absolute;
+    top: 0;
+    left: 0;
+}
+.logo{
+    overflow: hidden;
 }
 
-.active{
-    color:#008037;
+.logo img{
+    display:block;
+    width:100%;
+    height: 100%;
 }
+
+
+
+
+
+.header{
+    position:sticky;
+    top: 0px;
+    left: 0;
+    min-height: 70px;
+    z-index: 9999;
+    background-color: #fff;
+    /* flex-direction: column; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+
+/*################################# 
+MENU
+###################################*/
+
+.menu,.menuOpen{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    /* border:1px solid; */
+   padding-right: 50px;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 100px;
+    padding-top: 100px;
+    gap:20px;
+
+    position:absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    
+    height: 100vh;
+    transition:.4s ease-in-out;
+}
+.menuOpen{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    /* border:1px solid; */
+   padding-right: 50px;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 100px;
+    padding-top: 100px;
+    gap:20px;
+
+    position:absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    
+    height: 100vh;
+    transition:.4s ease-in-out;
+    transform:translateX(-100%);
+}
+
+.menuLink{
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 16px; 
+    /* font-size: 14px; */
+    line-height: 19px;
+    /* text-transform: capitalize; */
+    
+    color: #008037;
+    text-decoration: none;
+    display: block;
+   
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
+   
+
+    /* position: relative; */
+}
+
+
+
+.dropdownContent .menuLink{
+   padding: 10px;
+   display: block;
+   width: 100%;
+   
+}
+.dropdownContent .menuLink:hover{
+    background-color: #008037;
+    color:#fff;
+}
+
+
+.dropdownContent{
+    display: none;
+    position: absolute;
+    /* position:relative; */
+    top:20px;
+    /* left: -50px; */
+    
+    background-color: #f1f1f1;
+    background-color: #ffff;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    /* display: flex; */
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: .25rem;
+    text-align:left;
+    /* padding: .5rem; */
+
+}
+
+
+    .down::after {
+        display: inline-block;
+        margin-left: 0.255em;
+        vertical-align: 0.255em;
+        content: "";
+        border-top: 0.3em solid;
+        border-right: 0.3em solid transparent;
+        border-bottom: 0;
+        border-left: 0.3em solid transparent;
+    }
+
+
+.dropdown{
+    position:relative;
+}
+
+.dropdownContent .menuSubLink {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: inline-block;
+  }
+
+.dropdown:hover .dropdownContent{
+    display: flex;
+    /* display: inline-block; */
+    background-color: white;
+    /* width:max-content; */
+}
+
+@media(min-width:1100px){
+    .header{
+        position:sticky;
+        top: 0px;
+        left: 0;
+        /* min-height: 70px; */
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+        /* background-color: olive; */
+       
+       
+        
+    }
+
+    .hamburger{
+        display: none;
+    }
+    .menu,.menuOpen{
+       padding: 0;
+       padding-right: 50px;
+        position:relative;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        
+        height: 70px;
+        transition:.4s ease-in-out;
+        background-color: transparent;
+    }
+   
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
